Fix terms and privacy line break in mobile footer.

--- a/client/js/common/directives/footers/footers.scss
+++ b/client/js/common/directives/footers/footers.scss
@@ -179,7 +179,7 @@ footer {
 
     .footer-bottom {
       .left {
-        width: 224px;
+        width: 236px;
       }
 
       .right {
